--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -32,6 +32,11 @@
     </div>
   </div>
   <% end %>
+  <%= link_to new_article_path do %>
+    <div class="float_btn">
+      <i class="fa fa-plus">
+    </div>
+  <% end %>
 <% end %>
 
 </div>
