--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -1,5 +1,6 @@
 
-@import './variables'; .btn-primary {
+@import './variables'; 
+.btn-primary {
   background-color: $primary-color;
   border: none;
   width: 100%;
