--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -18,4 +18,8 @@ textarea, trix-editer {
   min-height: 440px;
   resize: vertical;
   border: 1px solid #EBEBEB;
+
+  &.sm {
+    min-height: 160px;
+  }
 }
