--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -29,11 +29,8 @@
   .comments-container
 
 .container
-  .btn-secondary.show-comment-form
-    コメントを追加
-  .comment-text-area.hidden
-    = text_area_tag :comment_content, '', class: 'sm'
-    .btn-secondary.add-comment-button
+  = link_to new_article_comment_path(@article) do
+    .btn-secondary
       コメントを追加
 
 = javascript_pack_tag 'article'
