--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -26,7 +26,9 @@
 
 .article
   %h2 コメント一覧
-  .comments-container
+  - @comments.each do |comment|
+    .article_comment
+      %p= comment.content
 
 .container
   = link_to new_article_comment_path(@article) do
