--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -20,9 +20,11 @@
     = @article.content
   - if user_signed_in?
     .article_heart.hidden.active-heart
-      = image_tag 'heart-active.svg'
+      = link_to article_like_path(@article), data: {method: 'delete'} do
+        = image_tag 'heart-active.svg'
     .article_heart.hidden.inactive-heart
-      = image_tag 'heart.svg'
+      = link_to article_like_path(@article), data: { method: 'post' } do
+        = image_tag 'heart.svg'
 
 .article
   %h2 コメント一覧
